Add logo image to JupyterHub section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <h1 class="r-fit-text">
               Users of JupyterHub <br />@ JupyterCon 2025
             </h1>
+            <img src="static/hublogo.svg" width="800" />
                 </section>
         <!-- Intro to presenters --> 
                 <section>
