Update session details and housekeeping information

--- a/index.html
+++ b/index.html
@@ -114,11 +114,20 @@
             </h1>
             <img src="static/hublogo.svg" width="800" />
                 </section>
-        <!-- Intro to presenters --> 
+        <!-- Housekeeping --> 
+                <section>
+                <h2>Housekeeping</h2>
+                <ul>
+                  <li>This workshop adheres to the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
+                  <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</li>
+                  <li>We'll have a break midway through this session but please take breaks as you need them!</li>
+                </ul>
+                </section>
+        <!-- Intro to team members at workshop --> 
                 <section>
                     Slide 2
                 </section>
-        <!-- Overview of the session & useful URLs -->
+        <!-- Session Agenda -->
                  <section>
                     <h2>Users of JupyterHub Workshop <br> Agenda</h2>
                     <table>
@@ -153,11 +162,16 @@
                 </section>
         <!-- Why run a users workshop? --> 
                  <section>
-                    Slide 4
+                    <h2>Workshop Motivation</h2>
+                    <p class="fragment">JupyterHub Administrators know a lot about deploying JupyterHub in different settings...</p>
+                    <p class="fragment">...but there hasn't been a clear pathway to feed this knowledge and insight back to the project team </p>
+                    <p class="fragment">We also want to help administrators and deployers get to know each other</p>
+                    <p class="fragment">& explore possible pathways for them to directly contribute their expertise back to JupyterHub</p>
                 </section>
         <!-- Why run a users workshop? --> 
                  <section>
-                    Slide 5
+                    <h2></h2>
+                     https://voicesofjupyterhub.orgmycology.com/
                 </section>
         <!-- Group introductions --> 
                  <section>
@@ -179,7 +193,7 @@
                  <section>
                     Slide 10
                 </section>
-        <!-- Contributng to JH-brainstorming --> 
+        <!-- Contributing to JH-brainstorming --> 
                  <section>
                     Slide 11
                 </section>
@@ -187,9 +201,43 @@
                  <section>
                     Slide 12
                 </section>
+      <!-- Next steps - VoJ Presentation --> 
+                 <section>
+                    <h2>Telling the story of JupyterHub: <br> Findings from the Voices of JupyterHub project</h2> 
+                    <br><h2><mark>Wednesday November 5, 2025, 11:35am PST <br> Royal Room </mark> </h2>
+                    <img src="static/hublogo.svg" width="800" />
+                </section>
         <!-- Next steps - HubDash-Community Share Out-SignUp to stay in touch --> 
                  <section>
-                    Slide 13
+                    <h2>What's next?</h2>
+                     <ul>
+                         <li>Check out the links on the next slide</li>
+                         <li>Sign up to the Community Share Out on December 4,  </li>
+                         <li>Can't make it but want to stayin touch? <br> Fill out this form: <a target="_blank" href=" "></a></li>
+                     </ul>
+                </section>
+                <section>
+                    <h2>Contributing to JupyterHub</h2>
+            <i class="fa-solid fa-book"></i
+            ><a target="_blank" href="https://jupyterhub.readthedocs.io/en/stable/"
+              >jupyterhub.readthedocs.io</a
+            ><br />
+            <i class="fa-solid fa-book"></i
+            ><a target="_blank" href="https://jupyterhub.readthedocs.io/en/stable/"
+              >jupyterhub.readthedocs.io</a
+            ><br />
+            <i class="fa-brands fa-discourse"></i
+            ><a target="_blank" href="https://discourse.jupyter.org/c/jupyterhub/10"
+              >discourse.jupyter.org/c/jupyterhub</a
+            ><br />
+            <i class="fa-solid fa-comment"></i
+            ><a target="_blank" href="https://jupyter.zulipchat.com/#narrow/channel/469744-jupyterhub"
+              >jupyter.zulip.chat/jupyterhub</a
+            >
+            <i class="fa-brands fa-compass"></i
+            ><a target="_blank" href="https://compass.hub.jupyter.org/"
+              >compass.hub.juptyer.org</a
+            >
                 </section>
             </div>
         </div>
