Fix markup for event date display in index.html

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <!-- Next steps - VoJ Presentation --> 
                  <section>
                     <h2>Telling the story of JupyterHub: <br> Findings from the Voices of JupyterHub project</h2> 
-                    <br><h2><mark>Wednesday November 5, 2025, 11:35am PST <br> Royal Room </mark> </h2>
+                    <br><h2>Wednesday November 5, 2025, 11:35am PST <br> Royal Room </h2>
                     <img src="static/hublogo.svg" width="800" />
                 </section>
         <!-- Next steps - HubDash-Community Share Out-SignUp to stay in touch --> 
