Fix HTML closing tag for shared notes link

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                 <h2>Housekeeping</h2>
                 <ul>
                   <li>This workshop adheres to the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
-                  <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</li>
+                  <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</a></li>
                   <li>We'll have a break midway through this session but please take breaks as you need them!</li>
                 </ul>
                 </section>
         <!-- Intro to team members at workshop --> 
                 <section>
-                    Slide 2
+                  <h2>Slide 2</h2>
                 </section>
         <!-- Why run a users workshop? --> 
                  <section>
