Add session agenda for JupyterHub workshop

--- a/index.html
+++ b/index.html
@@ -123,6 +123,39 @@
                   <li>We'll have a break midway through this session but please take breaks as you need them!</li>
                 </ul>
                 </section>
+                        <!-- Session Agenda -->
+                <section>
+                    <h2>Users of JupyterHub Workshop <br> Agenda</h2>
+                    <table>
+                      <tr>
+                        <th>Time</th>
+                        <th>Activity</th>
+                      </tr>
+                      <tr>
+                        <td>00:00 - 00:20</td> 
+                        <td>Scene Setting</td>
+                      </tr>
+                      <tr>
+                        <td>00:20 - 01:00</td>
+                        <td>Introductions</td>
+                      </tr>
+                    <tr>
+                        <td>01:00 - 02:15</td>
+                        <td>Group Discussions & Shareouts</td>
+                    </tr>
+                    <tr>
+                       <td>02:15 - 02:30</td>
+                       <td>Break</td>
+                    </tr>
+                    <tr>
+                      <td>02:30 - 03:20</td>
+                      <td>Contributing to JupyerHub as user</td> 
+                    </tr>
+                        <td>03:20 - 03:30</td>
+                        <td>Wrap up & next steps</td>
+                      </tr>
+                    </table>
+               </section>
         <!-- Intro to team members at workshop --> 
                 <section>
                   <h2>Slide 2</h2>
