--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       @layer base, fonts, highlight, reveal, theme;
       @import "./reveal.js/dist/reset.css" layer(base);
       @import "./reveal.js/dist/reveal.css" layer(reveal);
-      @import "./reveal.js/dist/theme/black.css" layer(theme);
+      @import "./reveal.js/dist/theme/simple.css" layer(theme);
       @import "./reveal.js/plugin/highlight/monokai.css" layer(highlight);
       @import "./assets/fontawesome/css/all.css" layer(fonts);
         </style>
@@ -120,6 +120,7 @@
                 <ul>
                   <li>This workshop adheres to the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
                   <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</a></li>
+                  <li>Please sign in on the document!</li>
                   <li>We'll have a break midway through this session but please take breaks as you need them!</li>
                 </ul>
                 </section>
@@ -163,44 +164,110 @@
         <!-- Why run a users workshop? --> 
                  <section>
                     <h2>Workshop Motivation</h2>
-                    <p class="fragment">JupyterHub Administrators know a lot about deploying JupyterHub in different settings...</p>
-                    <p class="fragment">...but there hasn't been a clear pathway to feed this knowledge and insight back to the project team </p>
-                    <p class="fragment">We also want to help administrators and deployers get to know each other</p>
-                    <p class="fragment">& explore possible pathways for them to directly contribute their expertise back to JupyterHub</p>
+                    <p class="fragment fade-in-then-semi-out">JupyterHub Administrators & Deployers know a lot about deploying JupyterHub in different settings...</p>
+                    <p class="fragment fade-in-then-semi-out">...but there hasn't always been a clear pathway to feed this knowledge and insight back to the project team </p>
+                    <p class="fragment fade-in-then-semi-out">We also want to provide spaces for administrators and deployers across the community to get to know each other...</p>
+                    <p class="fragment fade-in-then-semi-out">...& explore possible pathways for them to directly contribute their expertise back to JupyterHub</p>
                 </section>
         <!-- Why run a users workshop? --> 
-                 <section>
-                    <h2></h2>
-                     https://voicesofjupyterhub.orgmycology.com/
-                </section>
+                     <section>
+                        <p>This workshop is also part of implementing recommendations from the Voices of JupyterHub report</p>
+                        <p><a target="_blank" href="https://voicesofjupyterhub.orgmycology.com/">Read more at voicesofjupyterhub.orgmycology.com</a></p>
+                        <p>Or come to the talk on Wednesday morning (more details at the end!)</p>
+                    </section>
         <!-- Group introductions --> 
                  <section>
-                    Slide 6
-                </section>
+                   <h2>Introductions (40 mins) 💬</h2>
+                     <ul>
+                         <li>Spend 3-5 mins introducing yourself</li>
+                         <li>Name, organisation, </li>
+                         <li>Choice of two ice breaker topics:</li>
+                             <li>What assumption about running JupyterHub did you make, that turned out to be completely wrong?</li>
+                             <li>What session are you most looking forward to at JupyterCon?</li>
+                         <li><i>If we're a larger group we'll split up into groups to do this & rotate after 20 mins or so</i></li>
+                     </ul>
+                            </section>
         <!-- Groups!Discussion time --> 
                  <section>
-                    Slide 7
-                </section>
+                    <h2>Breakout disussion time (45 mins) 👥</h2>
+                     <p><b>Pick up to 3 of the following questions to discuss</b></p>
+                     <p>Add notes to the shared notes document as you chat</p>
+                     <p>Pick someone to report back to the main group</p>
+                     <p><i>If we're a smaller group, we'll go through the questions all together</i></p>
+                 </section>
+                    <section>
+                        <h2>Discussion questions</h2>
+                        <p>If you could go back and give yourself one piece of advice before your first deployment, what would it be?</p>
+                        <p>What's the most surprising infrastructure or operational challenge you've faced with JupyterHub?</p>
+                        <p>What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
+                        <p>If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
+                        <p>What are some of the security or compliance requirements that significantly shaped your implementation?</p>
+                        <p>How do you learn about JupyterHub updates? </p>
+                    </section>
         <!-- Discussion time --> 
-                 <section>
-                    Slide 8
-                </section>
-        <!-- Break --> 
-                 <section>
-                    Slide 9
-                </section>
+                    <section>
+                        <h2>Share Out (30 mins)</h2>
+                    </section>
+                        <!-- Session Agenda -->
+                <section>
+                    <h2>Users of JupyterHub Workshop <br> Agenda</h2>
+                    <table>
+                      <tr>
+                        <th>Time</th>
+                        <th>Activity</th>
+                      </tr>
+                      <tr>
+                        <td>00:00 - 00:20</td> 
+                        <td>Scene Setting</td>
+                      </tr>
+                      <tr>
+                        <td>00:20 - 01:00</td>
+                        <td>Introductions</td>
+                      </tr>
+                    <tr>
+                        <td>01:00 - 02:15</td>
+                        <td>Group Discussions & Shareouts</td>
+                    </tr>
+                    <tr>
+                       <td><b>02:15 - 02:30</b></td>
+                       <td><b>Break</b></td>
+                    </tr>
+                    <tr>
+                      <td>02:30 - 03:20</td>
+                      <td>Contributing to JupyerHub as user</td> 
+                    </tr>
+                        <td>03:20 - 03:30</td>
+                        <td>Wrap up & next steps</td>
+                      </tr>
+                    </table>
+               </section>
         <!-- Contributing to JH-intro --> 
                  <section>
-                    Slide 10
+                   <h1>Contributing to JupyterHub</h1>
                 </section>
         <!-- Contributing to JH-brainstorming --> 
-                 <section>
-                    Slide 11
-                </section>
-        <!-- Contributing to JH-use cases --> 
-                 <section>
-                    Slide 12
-                </section>
+                     <section>
+                        <h2>Contributing to JupyterHub: Brainstorming (30 mins) 🧠</h2>
+                        <p>How would you describe your relationship with the JupyterHub project and community?
+                        <p>How do you collect feedback from your users? How do they, or you, pass on this feedback to the project? How could this process be smoother?</p>
+                        <p>What would motivate you to become more involved with JupyterHub development or community? What are the practical steps the community could take to support that journey?</p>
+                        <p><i>If we're a large group, we'll split up into groups again</i></p>
+                    </section>
+            <!-- Contributing to JH-use cases --> 
+                     <section>
+                        <h2>JupyterHub Deployment Case Studies</h2>
+                        <p class="fragment">JupyterHub documentation currently lists JupyterHub deployments</p>
+                        <p class="fragment">But we'd like to share more about these!</p>
+                        <p class="fragment">Both to celebrate all the hard work which goes into running different types of deployment... 🎉</p>
+                        <p class="fragment">...& to inspire and support future deployers of JupyterHub 💡</p>
+                    </section>
+                    <section>
+                        <h2>JupyterHub Deployment Case Studies</h2>
+                        <p class="fragment">JupyterHub documentation currently lists JupyterHub deployments</p>
+                        <p class="fragment">But we'd like to share more about these!</p>
+                        <p class="fragment">Both to celebrate all the hard work which goes into running different types of deployment... 🎉</p>
+                        <p class="fragment">...& to inspire and support future deployers of JupyterHub 💡</p>
+                    </section>
       <!-- Next steps - VoJ Presentation --> 
                  <section>
                     <h2>Telling the story of JupyterHub: <br> Findings from the Voices of JupyterHub project</h2> 
