Update headings and text formatting in index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </section>
         <!-- Housekeeping --> 
                 <section>
-                <h2>Housekeeping</h2>
+                <h3>Housekeeping</h3>
                 <ul>
                   <li>This workshop adheres to the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
                   <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</a></li>
@@ -126,7 +126,7 @@
                 </section>
                         <!-- Session Agenda -->
                 <section>
-                    <h2>Users of JupyterHub Workshop <br> Agenda</h2>
+                    <h2>Agenda</h2>
                     <table>
                       <tr>
                         <th>Time</th>
@@ -162,22 +162,28 @@
                   <h2>Slide 2</h2>
                 </section>
         <!-- Why run a users workshop? --> 
-                 <section>
+                <section>
                     <h2>Workshop Motivation</h2>
-                    <p class="fragment fade-in-then-semi-out">JupyterHub Administrators & Deployers know a lot about deploying JupyterHub in different settings...</p>
+                    <p class="fragment fade-in-then-semi-out">JupyterHub administrators & deployers know a lot about deploying JupyterHub in different settings...</p>
                     <p class="fragment fade-in-then-semi-out">...but there hasn't always been a clear pathway to feed this knowledge and insight back to the project team </p>
-                    <p class="fragment fade-in-then-semi-out">We also want to provide spaces for administrators and deployers across the community to get to know each other...</p>
+                    <p class="fragment fade-in-then-semi-out">This workshop is an experiment to connect the project community & deployers on a regular cadence</p>
+                    <p class="fragment fade-in-then-semi-out"></p>
+                </section>
+      <!-- Why run a users workshop? --> 
+                <section>
+                    <h2>Workshop Motivation</h2>
+                    <p class="fragment fade-in-then-semi-out">We want to provide spaces for administrators and deployers across the community to get to know <b>each other...</b></p>
                     <p class="fragment fade-in-then-semi-out">...& explore possible pathways for them to directly contribute their expertise back to JupyterHub</p>
                 </section>
         <!-- Why run a users workshop? --> 
                      <section>
-                        <p>This workshop is also part of implementing recommendations from the Voices of JupyterHub report</p>
+                        <p>This workshop is also part of implementing recommendations from the "Voices of JupyterHub" report</p>
                         <p><a target="_blank" href="https://voicesofjupyterhub.orgmycology.com/">Read more at voicesofjupyterhub.orgmycology.com</a></p>
-                        <p>Or come to the talk on Wednesday morning (more details at the end!)</p>
+                        <p>Or come to the talk on Wednesday morning ☀️</p>
                     </section>
         <!-- Group introductions --> 
                  <section>
-                   <h2>Introductions (40 mins) 💬</h2>
+                   <h3>Introductions 💬(40 mins) </h3>
                      <ul>
                          <li>Spend 3-5 mins introducing yourself</li>
                          <li>Name, organisation, </li>
@@ -189,57 +195,28 @@
                             </section>
         <!-- Groups!Discussion time --> 
                  <section>
-                    <h2>Breakout disussion time (45 mins) 👥</h2>
+                    <h3>Breakout disussions 👥(45 mins)</h2>
                      <p><b>Pick up to 3 of the following questions to discuss</b></p>
                      <p>Add notes to the shared notes document as you chat</p>
                      <p>Pick someone to report back to the main group</p>
-                     <p><i>If we're a smaller group, we'll go through the questions all together</i></p>
+                     <i><p>If we're a smaller group, we'll go through the questions all together</p></i>
                  </section>
-                    <section>
-                        <h2>Discussion questions</h2>
-                        <p>If you could go back and give yourself one piece of advice before your first deployment, what would it be?</p>
-                        <p>What's the most surprising infrastructure or operational challenge you've faced with JupyterHub?</p>
-                        <p>What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
-                        <p>If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
-                        <p>What are some of the security or compliance requirements that significantly shaped your implementation?</p>
-                        <p>How do you learn about JupyterHub updates? </p>
-                    </section>
+                        <section>
+                            <h3>Discussion questions 👥</h3>
+                            <p>If you could go back and give yourself one piece of advice before your first deployment, what would it be?</p>
+                            <p>What's the most surprising infrastructure or operational challenge you've faced with JupyterHub?</p>
+                            <p>What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
+                            <p>If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
+                            <p>What are some of the security or compliance requirements that significantly shaped your implementation?</p>
+                            <p>How do you learn about JupyterHub updates? </p>
+                        </section>
         <!-- Discussion time --> 
                     <section>
                         <h2>Share Out (30 mins)</h2>
                     </section>
                         <!-- Session Agenda -->
                 <section>
-                    <h2>Users of JupyterHub Workshop <br> Agenda</h2>
-                    <table>
-                      <tr>
-                        <th>Time</th>
-                        <th>Activity</th>
-                      </tr>
-                      <tr>
-                        <td>00:00 - 00:20</td> 
-                        <td>Scene Setting</td>
-                      </tr>
-                      <tr>
-                        <td>00:20 - 01:00</td>
-                        <td>Introductions</td>
-                      </tr>
-                    <tr>
-                        <td>01:00 - 02:15</td>
-                        <td>Group Discussions & Shareouts</td>
-                    </tr>
-                    <tr>
-                       <td><b>02:15 - 02:30</b></td>
-                       <td><b>Break</b></td>
-                    </tr>
-                    <tr>
-                      <td>02:30 - 03:20</td>
-                      <td>Contributing to JupyerHub as user</td> 
-                    </tr>
-                        <td>03:20 - 03:30</td>
-                        <td>Wrap up & next steps</td>
-                      </tr>
-                    </table>
+                    <h1>☕BREAK!</h1>
                </section>
         <!-- Contributing to JH-intro --> 
                  <section>
@@ -247,7 +224,7 @@
                 </section>
         <!-- Contributing to JH-brainstorming --> 
                      <section>
-                        <h2>Contributing to JupyterHub: Brainstorming (30 mins) 🧠</h2>
+                        <h3>Contributing to JupyterHub: Brainstorming 🧠</h3>
                         <p>How would you describe your relationship with the JupyterHub project and community?
                         <p>How do you collect feedback from your users? How do they, or you, pass on this feedback to the project? How could this process be smoother?</p>
                         <p>What would motivate you to become more involved with JupyterHub development or community? What are the practical steps the community could take to support that journey?</p>
@@ -255,14 +232,14 @@
                     </section>
             <!-- Contributing to JH-use cases --> 
                      <section>
-                        <h2>JupyterHub Deployment Case Studies</h2>
+                        <h3>JupyterHub Deployment Case Studies</h3>
                         <p class="fragment">JupyterHub documentation currently lists JupyterHub deployments</p>
                         <p class="fragment">But we'd like to share more about these!</p>
                         <p class="fragment">Both to celebrate all the hard work which goes into running different types of deployment... 🎉</p>
                         <p class="fragment">...& to inspire and support future deployers of JupyterHub 💡</p>
                     </section>
                     <section>
-                        <h2>JupyterHub Deployment Case Studies</h2>
+                        <h3>JupyterHub Deployment Case Studies</h3>
                         <p class="fragment">JupyterHub documentation currently lists JupyterHub deployments</p>
                         <p class="fragment">But we'd like to share more about these!</p>
                         <p class="fragment">Both to celebrate all the hard work which goes into running different types of deployment... 🎉</p>
@@ -271,14 +248,15 @@
       <!-- Next steps - VoJ Presentation --> 
                  <section>
                     <h2>Telling the story of JupyterHub: <br> Findings from the Voices of JupyterHub project</h2> 
-                    <br><h2>Wednesday November 5, 2025, 11:35am PST <br> Royal Room </h2>
+                    <p>Wednesday November 5, 2025, 11:35am PST <br> Royal Room</p>
                     <img src="static/hublogo.svg" width="800" />
                 </section>
         <!-- Next steps - HubDash-Community Share Out-SignUp to stay in touch --> 
                  <section>
-                    <h2>What's next?</h2>
+                    <h3>What's next?</h3>
                      <ul>
                          <li>Check out the links on the next slide</li>
+                         <li>Keep an eye out for blog posts covering this event soon!</li>
                          <li>Sign up to the Community Share Out on December 4,  </li>
                          <li>Can't make it but want to stayin touch? <br> Fill out this form: <a target="_blank" href=" "></a></li>
                      </ul>
@@ -301,7 +279,7 @@
             ><a target="_blank" href="https://jupyter.zulipchat.com/#narrow/channel/469744-jupyterhub"
               >jupyter.zulip.chat/jupyterhub</a
             >
-            <i class="fa-brands fa-compass"></i
+            <i class="fa-solid fa-compass"></i
             ><a target="_blank" href="https://compass.hub.jupyter.org/"
               >compass.hub.juptyer.org</a
             >
