--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <ul>
                   <li>This workshop adheres to the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
                   <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</a></li>
-                  <li>Please sign in on the document!</li>
-                  <li>We'll have a break midway through this session but please take breaks as you need them!</li>
+                  <li>Please sign in on the document</li>
+                  <li>We'll have a break midway through this session, but please take breaks as you need them!</li>
                 </ul>
                 </section>
                         <!-- Session Agenda -->
@@ -232,18 +232,17 @@
                     </section>
             <!-- Contributing to JH-use cases --> 
                      <section>
-                        <h3>JupyterHub Deployment Case Studies</h3>
+                        <h3>JupyterHub Deployment Case Studies 🔎</h3>
                         <p class="fragment">JupyterHub documentation currently lists JupyterHub deployments</p>
                         <p class="fragment">But we'd like to share more about these!</p>
                         <p class="fragment">Both to celebrate all the hard work which goes into running different types of deployment... 🎉</p>
                         <p class="fragment">...& to inspire and support future deployers of JupyterHub 💡</p>
                     </section>
                     <section>
-                        <h3>JupyterHub Deployment Case Studies</h3>
-                        <p class="fragment">JupyterHub documentation currently lists JupyterHub deployments</p>
-                        <p class="fragment">But we'd like to share more about these!</p>
-                        <p class="fragment">Both to celebrate all the hard work which goes into running different types of deployment... 🎉</p>
-                        <p class="fragment">...& to inspire and support future deployers of JupyterHub 💡</p>
+                        <h3>JupyterHub Deployment Case Studies 🔎</h3>
+                        <p class="fragment">Check out the headings in the "Case Study Template" section of the shared notes</p>
+                        <p class="fragment">Are there any aspects missing you'd like to see included?</p>
+                        <p class="fragment">Would you or your team be willing to complete one on your deployments?</p>
                     </section>
       <!-- Next steps - VoJ Presentation --> 
                  <section>
