--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                 <section>
                 <h3>Housekeeping</h3>
                 <ul>
-                  <li>This workshop adheres to the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
-                  <li>The shared notes document is at <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</a></li>
+                  <li>This workshop follows the <a target="_blank" href="https://events.linuxfoundation.org/jupytercon/attend/code-of-conduct/">JupyterCon Code of Conduct</a></li>
+                  <li>The shared notes document is <a target="_blank" href="https://annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog?lang=en">annuel.framapad.org/p/jupyterhub-users-jc-nov-2025-ahog</a></li>
                   <li>Please sign in on the document</li>
                   <li>We'll have a break midway through this session, but please take breaks as you need them!</li>
                 </ul>
@@ -138,7 +138,7 @@
                       </tr>
                       <tr>
                         <td>00:20 - 01:00</td>
-                        <td>Introductions</td>
+                        <td>Group Connections</td>
                       </tr>
                     <tr>
                         <td>01:00 - 02:15</td>
@@ -159,38 +159,40 @@
                </section>
         <!-- Intro to team members at workshop --> 
                 <section>
-                  <h2>Slide 2</h2>
+                  <h3>A quick hello from the facilitators... 👋</h3>
                 </section>
         <!-- Why run a users workshop? --> 
                 <section>
-                    <h2>Workshop Motivation</h2>
+                    <h3>Workshop Motivation ✨</h3>
                     <p class="fragment fade-in-then-semi-out">JupyterHub administrators & deployers know a lot about deploying JupyterHub in different settings...</p>
                     <p class="fragment fade-in-then-semi-out">...but there hasn't always been a clear pathway to feed this knowledge and insight back to the project team </p>
-                    <p class="fragment fade-in-then-semi-out">This workshop is an experiment to connect the project community & deployers on a regular cadence</p>
+                    <p class="fragment fade-in-then-semi-out">This workshop is part of an experiment to connect the project community & deployers on a regular cadence</p>
                     <p class="fragment fade-in-then-semi-out"></p>
                 </section>
       <!-- Why run a users workshop? --> 
                 <section>
-                    <h2>Workshop Motivation</h2>
+                    <h3>Workshop Motivation ✨</h3>
                     <p class="fragment fade-in-then-semi-out">We want to provide spaces for administrators and deployers across the community to get to know <b>each other...</b></p>
                     <p class="fragment fade-in-then-semi-out">...& explore possible pathways for them to directly contribute their expertise back to JupyterHub</p>
                 </section>
         <!-- Why run a users workshop? --> 
                      <section>
-                        <p>This workshop is also part of implementing recommendations from the "Voices of JupyterHub" report</p>
+                        <p>This workshop was inspired by the recommendations from the "Voices of JupyterHub" report, part of CZI EOSS grant</p>
                         <p><a target="_blank" href="https://voicesofjupyterhub.orgmycology.com/">Read more at voicesofjupyterhub.orgmycology.com</a></p>
-                        <p>Or come to the talk on Wednesday morning ☀️</p>
+                        <p>Or come to the talk on Wednesday morning (11:35am, Royal Room) ☀️</p>
                     </section>
         <!-- Group introductions --> 
                  <section>
-                   <h3>Introductions 💬(40 mins) </h3>
+                   <h3>Group Connections 💬(40 mins) </h3>
                      <ul>
                          <li>Spend 3-5 mins introducing yourself</li>
-                         <li>Name, organisation, </li>
-                         <li>Choice of two ice breaker topics:</li>
+                         <li>Name and organisation</li>
+                         <li>Choice of two ice breaker topics (or pick your own!):</li>
+                         <ul>
                              <li>What assumption about running JupyterHub did you make, that turned out to be completely wrong?</li>
                              <li>What session are you most looking forward to at JupyterCon?</li>
-                         <li><i>If we're a larger group we'll split up into groups to do this & rotate after 20 mins or so</i></li>
+                         </ul>
+                         <li><b>If we're a larger group we'll split up into groups to do this & rotate after 20 mins or so</b></li>
                      </ul>
                             </section>
         <!-- Groups!Discussion time --> 
