Add images to session agenda and contributing sections

--- a/index.html
+++ b/index.html
@@ -219,10 +219,12 @@
                         <!-- Session Agenda -->
                 <section>
                     <h1>☕BREAK!</h1>
+                    <img src="static/DecolonisingKnowledge.jpg" width="800" />
                </section>
         <!-- Contributing to JH-intro --> 
                  <section>
                    <h1>Contributing to JupyterHub</h1>
+                    <img src="static/contributing.jpg" width="800" />
                 </section>
         <!-- Contributing to JH-brainstorming --> 
                      <section>
