Update discussion questions and next steps section

--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
                  </section>
                         <section>
                             <h3>Discussion questions 👥</h3>
-                            <p>If you could go back and give yourself one piece of advice before your first deployment, what would it be?</p>
-                            <p>What's the most surprising infrastructure or operational challenge you've faced with JupyterHub?</p>
-                            <p>What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
-                            <p>If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
-                            <p>What are some of the security or compliance requirements that significantly shaped your implementation?</p>
-                            <p>How do you learn about JupyterHub updates? </p>
+                            <p class="r-fit-text">If you could go back and give yourself one piece of advice before your first deployment, what would it be?</p>
+                            <p class="r-fit-text">What's the most surprising infrastructure or operational challenge you've faced with JupyterHub?</p>
+                            <p class="r-fit-text">What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
+                            <p class="r-fit-text">If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
+                            <p class="r-fit-text">What are some of the security or compliance requirements that significantly shaped your implementation?</p>
+                            <p class="r-fit-text">How do you learn about JupyterHub updates? </p>
                         </section>
         <!-- Discussion time --> 
                     <section>
@@ -254,14 +254,13 @@
                     <p>Wednesday November 5, 2025, 11:35am PST <br> Royal Room</p>
                     <img src="static/hublogo.svg" width="800" />
                 </section>
-        <!-- Next steps - HubDash-Community Share Out-SignUp to stay in touch --> 
+        <!-- Next steps - SignUp to stay in touch --> 
                  <section>
                     <h3>What's next?</h3>
                      <ul>
                          <li>Check out the links on the next slide</li>
                          <li>Keep an eye out for blog posts covering this event soon!</li>
-                         <li>Sign up to the Community Share Out on December 4,  </li>
-                         <li>Can't make it but want to stayin touch? <br> Fill out this form: <a target="_blank" href=" "></a></li>
+                         <li>Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></li>
                      </ul>
                 </section>
                 <section>
@@ -281,7 +280,7 @@
             <i class="fa-solid fa-comment"></i
             ><a target="_blank" href="https://jupyter.zulipchat.com/#narrow/channel/469744-jupyterhub"
               >jupyter.zulip.chat/jupyterhub</a
-            >
+            ><br/>
             <i class="fa-solid fa-compass"></i
             ><a target="_blank" href="https://compass.hub.jupyter.org/"
               >compass.hub.juptyer.org</a
